--- a/layouts/partials/extend_head.html
+++ b/layouts/partials/extend_head.html
@@ -1,27 +1,35 @@
-{{- /* Head custom content area start */ -}}
-{{- /*     Insert any custom code (web-analytics, resources, etc.) - it will appear in the <head></head> section of every page. */ -}}
-{{- /*     Can be overwritten by partial with the same name in the global layouts. */ -}}
-{{- /* Head custom content area end */ -}}
+{{- /* Head custom content area start */ -}} {{- /* Insert any custom code
+(web-analytics, resources, etc.) - it will appear in the <head></head> section
+of every page. */ -}} {{- /* Can be overwritten by partial with the same name in
+the global layouts. */ -}} {{- /* Head custom content area end */ -}}
+
+<!-- See https://adityatelange.github.io/hugo-PaperMod/posts/math-typesetting/ -->
+{{ if or .Params.math .Site.Params.math }}
+{{ partial "math.html" . }}
+{{ end }}
 
 <!-- 使用cdn加载文件 -->
 <script src="https://cdn.jsdelivr.net/npm/mermaid/dist/mermaid.min.js"></script>
 <script>
-// 自定义mermaid配置
-const config = {
-    startOnLoad:true,
-    theme: 'forest',
+  // 自定义mermaid配置
+  const config = {
+    startOnLoad: true,
+    theme: "forest",
     themeVariables: {
-        lineColor: "#fafafa" // 由于paperMod的代码块背景是黑色的，这里将线条设置为白色
+      lineColor: "#fafafa", // 由于paperMod的代码块背景是黑色的，这里将线条设置为白色
     },
     flowchart: {
-        useMaxWidth:false,
-        htmlLabels:true
-    }
-};
-mermaid.initialize(config);
-// 需要注意的是，要将初始化代码放到 window.onload 回调函数里面才有用
-// 否则会因为在html元素加载前进行初始化，找不到元素而失效
-window.onload = () => {
-    window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
-}
+      useMaxWidth: false,
+      htmlLabels: true,
+    },
+  };
+  mermaid.initialize(config);
+  // 需要注意的是，要将初始化代码放到 window.onload 回调函数里面才有用
+  // 否则会因为在html元素加载前进行初始化，找不到元素而失效
+  window.onload = () => {
+    window.mermaid.init(
+      undefined,
+      document.querySelectorAll(".language-mermaid")
+    );
+  };
 </script>
